# hellovulkantriangle

./: CMakeLists.txt  hellovulkantriangle.qrc  main.cpp  main.h  main.qml  trianglerenderer.cpp  trianglerenderer.h
.cache/clangd/index/: main.cpp.5DD97696453FD9E9.idx  trianglerenderer.cpp.A04E15ED75DDB304.idx  trianglerenderer.h.D4C2DE7D27798AEC.idx
